ユーザー画像アップロード機能の追加

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,6 +36,10 @@
   <div class="actions">
     <%= f.submit t('.update') %>
   </div>
+
+  <span>
+    <%= f.file_field :icon %>
+  </span>
 <% end %>
 
 <h3><%= t('.cancel_my_account') %></h3>
