--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,7 +15,7 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <th><%= image_tag user.icon if user.icon.attached? %></th>
+        <th><%= image_tag user.icon.variant(resize_to_fill: [30, 30]) if user.icon.attached? %></th>
         <td><%= user.email %></td>
         <td><%= user.name %></td>
         <td><%= user.postal_code %></td>
