フォローの統計情報追加

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,6 +33,20 @@
   <% end %>
 </p>
 
+<p>
+  <strong><%= t('.following') %>:</strong>
+  <a href="<%= following_user_path(@user) %>">
+    <%= @user.following.count %>
+  </a>
+</p>
+
+<p>
+  <strong><%= t('.followers') %>:</strong>
+  <a href="<%= followers_user_path(@user) %>">
+    <%= @user.followers.count %>
+  </a>
+</p>
+
 <% if current_user == @user %>
   <%= link_to t('views.common.edit'), edit_user_registration_path %> |
 <% end %>
