--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,6 +47,22 @@
   </a>
 </p>
 
+<% unless current_user == @user %>
+  <p>
+    <% if current_user.following?(@user) %>
+      <%= form_with(model: current_user.active_relationships.find_by(followed_id: @user.id),
+                    html: { method: :delete }, local: true) do |f| %>
+        <%= f.submit "Unfollow" %>
+      <% end %>
+    <% else %>
+      <%= form_with(model: current_user.active_relationships.build, local: true) do |f| %>
+        <%= hidden_field_tag :followed_id, @user.id %>
+        <%= f.submit "Follow" %>
+      <% end %>
+    <% end %>
+  </p>
+<% end %>
+
 <% if current_user == @user %>
   <%= link_to t('views.common.edit'), edit_user_registration_path %> |
 <% end %>
