--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,14 +1,16 @@
-<p id="notice"><%= notice %></p>
+<h1><%= t('views.common.title_show', name: Report.model_name.human) %></h1>
 
 <p>
-  <strong>Title:</strong>
+  <strong><%= Report.human_attribute_name(:title) %>:</strong>
   <%= @report.title %>
 </p>
 
 <p>
-  <strong>Content:</strong>
+  <strong><%= Report.human_attribute_name(:content) %>:</strong>
   <%= @report.content %>
 </p>
 
-<%= link_to 'Edit', edit_report_path(@report) %> |
-<%= link_to 'Back', reports_path %>
+<% if @report.created_by?(current_user) %>
+  <%= link_to t('views.common.edit'), edit_report_path(@report) %> |
+<% end %>
+<%= link_to t('views.common.back'), reports_path %>
