--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -4,6 +4,7 @@
   <thead>
     <tr>
       <th><%= Report.human_attribute_name(:title) %></th>
+      <th><%= Report.human_attribute_name(:user) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +13,7 @@
     <% @reports.each do |report| %>
       <tr>
         <td><%= report.title %></td>
+        <td><%= report.user.name_or_email %></td>
         <td><%= link_to t('views.common.show'), report %></td>
         <% if report.created_by?(current_user) %>
           <td><%= link_to t('views.common.edit'), edit_report_path(report) %></td>
