--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,6 +1,11 @@
 <h1><%= t('views.common.title_show', name: Report.model_name.human) %></h1>
 
 <p>
+  <strong><%= Report.human_attribute_name(:user) %>:</strong>
+  <%= @report.user.name_or_email %>
+</p>
+
+<p>
   <strong><%= Report.human_attribute_name(:title) %>:</strong>
   <%= @report.title %>
 </p>
