日報投稿日時表示機能の追加

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong><%= Report.human_attribute_name(:created_on) %>:</strong>
+  <%= l @report.created_on %>
+</p>
+
+<p>
   <strong><%= Report.human_attribute_name(:title) %>:</strong>
   <%= @report.title %>
 </p>
