--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th><%= Report.human_attribute_name(:title) %></th>
       <th><%= Report.human_attribute_name(:user) %></th>
+      <th><%= Report.human_attribute_name(:created_on) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +15,7 @@
       <tr>
         <td><%= report.title %></td>
         <td><%= report.user.name_or_email %></td>
+        <td><%= l report.created_on %></td>
         <td><%= link_to t('views.common.show'), report %></td>
         <% if report.created_by?(current_user) %>
           <td><%= link_to t('views.common.edit'), edit_report_path(report) %></td>
