--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -20,6 +20,8 @@
   <%= @report.content %>
 </p>
 
+<%= render 'comments/comments', commentable: @report %>
+
 <% if @report.created_by?(current_user) %>
   <%= link_to t('views.common.edit'), edit_report_path(@report) %> |
 <% end %>
