コメント投稿機能の追加

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,6 +21,7 @@
 </p>
 
 <%= render 'comments/comments', commentable: @book %>
+<%= render 'comments/form', commentable: @book %>
 
 <%= link_to t('views.common.edit'), edit_book_path(@book) %> |
 <%= link_to t('views.common.back'), books_path %>
