--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -21,6 +21,7 @@
 </p>
 
 <%= render 'comments/comments', commentable: @report %>
+<%= render 'comments/form', commentable: @report %>
 
 <% if @report.created_by?(current_user) %>
   <%= link_to t('views.common.edit'), edit_report_path(@report) %> |
