--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,4 +27,4 @@
 
 <br>
 
-<%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+<%= link_to t('views.common.sign_out'), destroy_user_session_path, method: :delete %>
