--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -34,4 +34,4 @@
 
 <br>
 
-<%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+<%= link_to t('views.common.sign_out'), destroy_user_session_path, method: :delete %>
